# Sentilyzer

./: .bandit.yml  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DOCKER_PYTHON_IMPORTS.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PLAN.md  README.md  Sentilyzer.code-workspace  docker-compose.yml  pip.conf  pyproject.toml  pyrightconfig.json  requirements-dev.in  requirements-dev.txt  requirements-test.txt  test_structure.md
.github/workflows/: ci.yml
docs/: DOCKER_TIMEOUT_SOLUTIONS.md  PITCH.md  README.md  TEAM.md
docs/1_introduction/: 01_vision_and_pitch.md  02_high_level_architecture.md
docs/2_user_guide/: 01_api_usage_and_endpoints.md  02_dashboard_guide.md
docs/3_developer_guide/: 01_getting_started.md  03_database_and_migrations.md  04_testing_strategy.md
docs/3_developer_guide/02_service_deep_dive/: data_ingestor.md  sentiment_processor.md  signals_api.md
docs/4_architecture_decisions/adr/: 001-service_oriented_architecture.md  002-database_as_event_bus.md  003-asynchronous_processing_with_celery.md  004-solving_docker_python_import_challenges.md  005-handling_docker_service_timeouts.md
docs/5_project_management/: roadmap.md  team.md
scripts/: build_with_retry.sh  create_test_data.py  docker-entrypoint.sh  fix_boolean_comparisons.py  fix_line_length.py  format_code.sh  generate_api_key.py  local_rebuild.sh  seed_database.py
services/common/: Dockerfile  alembic.ini  requirements.txt
services/common/alembic/: env.py
services/common/alembic/versions/: 2b4f25e11063_create_initial_database_schema.py  4e5930ee5acb_create_initial_database_schema_with_all_.py  924aa26d1795_initial_schema.py
services/common/app/: __init__.py  logging_config.py
services/common/app/db/: base.py  models.py  session.py
services/common/app/schemas/: sentiment.py
services/dashboard/: Dockerfile  requirements.txt
services/dashboard/app/: main.py
services/data_ingestor/: Dockerfile  Dockerfile 2  requirements.txt
services/data_ingestor/app/: __init__.py  main 2.py  main.py  scheduler 2.py  scheduler.py  tasks.py
services/sentiment_processor/: Dockerfile  Dockerfile 2  requirements.txt
services/sentiment_processor/app/: __init__.py  main 2.py  main.py  notification_processor 2.py  notification_processor.py  worker.py
services/signals_api/: Dockerfile  requirements.txt
services/signals_api/app/: __init__.py  main.py
services/twitter_ingestor/: Dockerfile  requirements.txt
services/twitter_ingestor/app/: main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api_auth.py  test_data_pipeline.py  test_phase3_features.py  test_signals_api.py
tests/unit/: test_data_ingestor.py  test_sentiment_processor.py
