[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentilyzer"
version = "0.1.0"
description = "Financial sentiment analysis and trading signals platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Oğuzhan Çoban", email = "oguzhan@sentilyzer.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    
    # Web Framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    
    # HTTP Client
    "httpx>=0.24.0",
    
    # Date/Time
    "python-dateutil>=2.8.0",
    
    # Logging
    "structlog>=23.0.0",
    
    # Environment
    "python-dotenv>=1.0.0",

    # Data parsing
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    
    # Task queue
    "celery>=5.3.0",
    "redis>=5.0.0",
    
    # Rate limiting
    "slowapi>=0.1.9",

    # Retry handling
    "tenacity>=8.2.0",
]

[project.urls]
"Homepage" = "https://github.com/oguzhancoban/Sentilyzer"

[project.optional-dependencies]
common = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
]
data_ingestor = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tenacity>=8.2.0",
]
sentiment_processor = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
]
signals_api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
]
twitter_ingestor = [
    # Twitter API dependencies can be added here when needed
]
all = [
    "sentilyzer[dashboard]",
    "sentilyzer[data_ingestor]",
    "sentilyzer[sentiment_processor]",
    "sentilyzer[signals_api]",
    "sentilyzer[twitter_ingestor]",
]
dev = [
    "sentilyzer[all]",
    "ruff",
    "uv",
    "mypy>=1.6.0",
    "types-requests",
    "types-redis",
    "types-freezegun",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "testcontainers",
    "Faker",
    "freezegun",
    "asyncpg",
    "fakeredis",
    "safety",
    "bandit[toml]",
    "pre-commit>=3.4.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.setuptools.package-dir]
common = "services/common/app"
dashboard = "services/dashboard/app"
data_ingestor = "services/data_ingestor/app"
sentiment_processor = "services/sentiment_processor/app"
signals_api = "services/signals_api/app"
twitter_ingestor = "services/twitter_ingestor/app"

[tool.ruff]
line-length = 90
target-version = "py310"
src = ["services", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "A",      # flake8-builtins
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PT",     # flake8-pytest-style
    "D",      # pydocstyle
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "B008",
    "E402",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app", "services"]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=services --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
branch = true
source = ["services"]
omit = [
    "tests/*",
    "**/__init__.py",
    "**/alembic/*",
    "*_test.py",
    "**/main.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "...",
]
fail_under = 80

[tool.poetry.group.data_ingestor.dependencies]
celery = "^5.3.4"
redis = "^5.0.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"
schedule = "^1.2.2"
django-celery-beat = "^2.6.0"

[tool.poetry.group.sentiment_processor.dependencies]
celery = "^5.3.4"
redis = "^5.0.4"
